# rufi

./: .gitignore  Cargo.toml  README.md
src/: app_search.rs  config.rs  delegate.rs  file_search.rs  main.rs  search_mode.rs  system_commands.rs  ui.rs  window.rs
