[package]
name = "rofi-mac"
version = "0.1.0"
edition = "2021"

[dependencies]
cocoa = "0.25"
objc = "0.2"
core-foundation = "0.9"
core-graphics = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
fuzzy-matcher = "0.3"
rand = "0.8"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
panic = "abort"     # Smaller binary
